@@ -1,1 +1,0 @@
-ALSA sequencer interface
