@@ -1,1 +1,0 @@
-Xaw interface
