@@ -407,7 +407,6 @@ __attribute__((noreturn))
 static inline int parse_opt_h(const char *);
 #ifdef IA_DYNAMIC
 static inline void list_dyna_interface(FILE *, char *, char *);
-static inline char *dynamic_interface_info(char *);
 ControlMode *dynamic_interface_module(int);
 #endif
 static inline int parse_opt_i(const char *);
@@ -3923,56 +3922,38 @@ static inline int parse_opt_h(const char *arg)
 #ifdef IA_DYNAMIC
 static inline void list_dyna_interface(FILE *fp, char *path, char *mark)
 {
-	URL url;
-	char fname[BUFSIZ], name[16], *info;
-	ControlMode *cmp, **cmpp;
-	int i, id;
-	
-	if ((url = url_dir_open(path)) == NULL)
+    URL dir;
+    char fname[NAME_MAX];
+    int cwd;
+	if ((dir = url_dir_open(path)) == NULL)
 		return;
-	while (url_gets(url, fname, sizeof(fname)) != NULL)
+	cwd = open(".", 0);
+	if(chdir(path) != 0)
+		return;
+	while (url_gets(dir, fname, sizeof(fname)) != NULL)
 		if (strncmp(fname, "if_", 3) == 0) {
-			for (i = 0; i < 15 && fname[i + 3] != '.'; i++)
-				name[i] = fname[i + 3];
-			name[i] = '\0';
-			for (cmpp = ctl_list, id = '\0'; (cmp = *cmpp) != NULL; cmpp++)
-				if (! strcmp(cmp->id_short_name, name)) {
-					id = cmp->id_character;
-					break;
-				}
-			if (! id || mark[id])
-				continue;
-			mark[id] = 1;
-			info = dynamic_interface_info(name);
-			if (info != NULL)
-				fprintf(fp, "  -i%c          %s" NLS, id, info);
+			void* handle = NULL;
+			if(handle = dl_load_file(fname)) {
+				ControlMode *(* loader)(void);
+				char c = CHAR_MAX;
+				loader = NULL;
+				do {
+					char buf[20]; /* enough */
+					if(mark[c]) continue;
+					sprintf(buf, "interface_%c_loader", c);
+					if(loader = dl_find_symbol(handle, buf)) {
+						fprintf(fp, "  -i%c          %s" NLS, c, loader()->id_name);
+						mark[c] = 1;
+						goto cleanup;
+					}
+				} while (--c != CHAR_MAX); /* round-trip detection */
+			cleanup:
+				dl_free(handle);
+			}
 		}
-	url_close(url);
-}
-
-static inline char *dynamic_interface_info(char *name)
-{
-	static char libinfo[MAXPATHLEN];
-	int fd, n;
-	char *nl;
-	
-	sprintf(libinfo, "%s" PATH_STRING "if_%s.txt",
-			dynamic_lib_root, name);
-	if ((fd = open(libinfo, 0)) < 0)
-		return NULL;
-	n = read(fd, libinfo, sizeof(libinfo) - 1);
-	close(fd);
-	if (n <= 0)
-		return NULL;
-	libinfo[n] = '\0';
-	if ((nl = strchr(libinfo, '\n')) == libinfo)
-		return NULL;
-	if (nl != NULL) {
-		*nl = '\0';
-		if (*(nl - 1) == '\r')
-			*(nl - 1) = '\0';
-	}
-	return libinfo;
+	fchdir(cwd);
+	close(cwd);
+	url_close(dir);
 }
 
 ControlMode *dynamic_interface_module(int id_char)
